# watchlist

./: .gitignore  README.md  database.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  scraper.ts  scrapy.cfg  server.ts  tsconfig.app.json  util.ts  vite.config.ts  watch.py  watchlist.desktop
src/: App.css  App.tsx  EditScriptView.module.css  EditScriptView.tsx  HintView.module.css  HintView.tsx  InsertItemView.module.css  InsertItemView.tsx  NavbarView.module.css  NavbarView.tsx  WatchlistView.module.css  WatchlistView.tsx  index.css  main.tsx
watchlist/: database.py  items.py  main.py  pipelines.py  settings.py  spider.py  util.py
